<resources>
    <string name="app_name">SelfDriveGPS</string>
    <string name="title_activity_maps">Map</string>
    <string name="settings_activity">WelcomeScreen</string>
    <string name="start">Start</string>
    <string name="speed_counter"> %.1f km/h </string>
    <string name="accuracy_of_gps"> %.1f m </string>
    <string name="tv_meter_of_range_for_field"> %d</string>
    <string name="speed_counter_default"> 0 km/h </string>
    <string name="accuracy_of_gps_default"> 0 m </string>
    <string name="tv_bluetooth_switch_settingsActivity">bluetooth</string>
    <string name="tv_wifi_switch_settingsActivity">Wi Fi</string>
    <string name="tv_rangeOfSet_settingsActivity">Range of set</string>
    <string name="bt_new_project_mainActivity">Start New Project</string>
    <string name="btn_load_projects_mainActivity">Load Projects</string>
    <string name="btn_settings_mainActivity">Settings</string>
    <string name="et_give_name_of_field_you_saved_popActivity">Give a suitable name</string>
    <string name="bt_on_dialog_cancel">Cancel</string>
    <string name="bt_on_dialog_send">Send</string>
    <string name="bt_on_dialog_yes">Yes</string>
    <string name="bt_on_dialog_no">No</string>
    <string name="label_on_dialog_create_field">Save field to the database</string>
    <string name="label_on_dialog_create_line">Select the range between lines</string>
    <string name="label_on_dialog_driving">Recalculate the range between lines</string>
    <string name="plus_btn_settingsActivity">+</string>
    <string name="sub_btn_settingsActivity">-</string>
    <string name="tv_meter_of_range_for_field_default">m</string>
    <string name="tv_default_range_field">8</string>
    <string name="arrow_imageView">arrow</string>
    <string name="line_rage_imageView">line rage</string>
    <string name="stop">stop</string>
    <string name="mode_unknown">Mode: Unknown</string>
    <string name="main_description_for_nav_bar">All attributes for nav_bar</string>
    <string name="terrain_type_1">Normal</string>
    <string name="terrain_type_2">Satellite</string>
    <string name="terrain_type_3">Terrain</string>
    <string name="main_description_on_settings_btn_on_map">Main buttons to change settings through map</string>
    <string name="location_mode">Location Mode</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create account</string>
    <string name="repeat_password">Repeat password</string>
    <string name="unknown_user">Unknown User</string>
    <string name="log_out">Log Out</string>
    <string name="warning_message">Please change Location Mode to high accuracy through Settings</string>
    <string name="warning">Warning :</string>
    <string name="location_unknown_mode">Location Mode: Unknown Mode</string>
    <string name="search_field">Search Field\.\.\.</string>
    <string name="range_between_lines">Range between lines</string>
    <string name="you_are_going_to_save_this_field_on_database">You are going to save this field on Database</string>
    <string name="center_of_antenna">Center of antenna</string>
    <string name="edit">Edit</string>
    <string name="front">Front</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="back">Back</string>
    <string name="default_value_for_antenna">0</string>
</resources>
