<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:orientation="vertical"
    android:gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_wifi_switch_settingsActivity"
        android:layout_gravity="center"
        android:textStyle="bold|italic"/>
    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tBtn_wifi"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_bluetooth_switch_settingsActivity"
        android:id="@+id/tv_bluetooth"
        android:layout_gravity="center"
        android:textStyle="bold|italic"/>
    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tBtn_bluetooth"/>
    <Space
        android:layout_width="32dp"
        android:layout_height="25dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_rangeOfSet_settingsActivity"
        android:layout_gravity="center"
        android:textStyle="bold|italic"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:id="@+id/btn_sub"
            android:text="@string/sub_btn_settingsActivity"/>
        <Space
            android:layout_width="5dp"
            android:layout_height="0dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_range_of_field_meter"
            android:text="@string/tv_default_range_field"/>
        <Space
            android:layout_width="5dp"
            android:layout_height="0dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_meter_of_range_for_field_default"/>
        <Space
            android:layout_width="5dp"
            android:layout_height="0dp" />
        <Button
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:id="@+id/btn_plus"
            android:text="@string/plus_btn_settingsActivity"/>
    </LinearLayout>

</LinearLayout>
