<fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gr.teicm.informatics.selfdrivegps.MapsActivity" >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_speed_of_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textColor="@color/colorAccent"
            android:text="@string/speed_counter_default" />
        <TextView
            android:id="@+id/tv_accuracy_of_gps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textColor="@color/colorAccent"
            android:text="@string/accuracy_of_gps_default" />
    </LinearLayout>
    <ToggleButton
        android:id="@+id/start_calculations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:textOn="@string/stop"
        android:textOff="@string/start"
        android:padding="10dp"
        android:layout_marginTop="20dp" />
</fragment>
