<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#8000">


        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:id="@+id/rl_navigation_bar"
            android:visibility="gone">
            <ImageView
                android:id="@+id/iv_center_green_cube"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_margin="10dp"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/main_description_for_nav_bar"
                android:visibility="invisible"
                android:src="@drawable/green_cube"/>
            <ImageView
                android:id="@+id/iv_left_green_cube"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_alignBottom="@+id/iv_main_nav_bar"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="6dp"
                android:layout_marginStart="28dp"
                android:contentDescription="@string/main_description_for_nav_bar"
                android:visibility="invisible"
                android:src="@drawable/green_cube" />
            <ImageView
                android:id="@+id/iv_right_green_cube"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_alignBottom="@+id/iv_main_nav_bar"
                android:layout_alignEnd="@+id/iv_main_nav_bar"
                android:layout_marginBottom="6dp"
                android:layout_marginEnd="28dp"
                android:contentDescription="@string/main_description_for_nav_bar"
                android:visibility="invisible"
                android:src="@drawable/green_cube" />
            <ImageView
                android:id="@+id/iv_main_nav_bar"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:src="@drawable/nav_bar"
                android:contentDescription="@string/main_description_for_nav_bar"
                android:layout_marginTop="4dp"/>
        </RelativeLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:contentDescription="@string/main_description_on_settings_btn_on_map"
            android:src="@drawable/change_range_meter_icon"
            android:id="@+id/bt_change_range_meter"
            android:visibility="visible"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/main_description_on_settings_btn_on_map"
            android:src="@drawable/maps_icon_button"
            android:id="@+id/bt_map_terrain_change"/>
        <ToggleButton
            android:id="@+id/start_calculations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textOn="@string/stop"
            android:textOff="@string/start"
            android:padding="10dp" />
    </LinearLayout>

</android.support.v7.widget.Toolbar>